--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lauxinyi/box-editor": "^1.1.40",
-    "@lauxinyi/box-ui": "^1.1.40",
+    "@lauxinyi/box-editor": "^1.1.42",
+    "@lauxinyi/box-ui": "^1.1.42",
     "@riophae/vue-treeselect": "^0.4.0",
     "axios": "^0.18.0",
     "ckeditor4-vue": "^1.3.1",
     "countup.js": "^1.9.3",
+    "dayjs": "^1.11.6",
+    "echarts": "^5.4.0",
     "element-ui": "^2.13.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
@@ -27,6 +29,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
+    "splitpanes": "^3.1.5",
     "tpanorama": "^1.0.6",
     "vue": "^2.7.10",
     "vue-awesome": "^4.3.1",
