--- a/openDataV/package.json
+++ b/openDataV/package.json
@@ -15,20 +15,13 @@
     "@codemirror/state": "^6.1.1",
     "@codemirror/theme-one-dark": "^6.1.0",
     "@codemirror/view": "^6.2.4",
-    "@vicons/antd": "^0.12.0",
-    "@vicons/carbon": "^0.12.0",
-    "@vicons/fa": "^0.12.0",
-    "@vicons/fluent": "^0.12.0",
-    "@vicons/ionicons4": "^0.12.0",
-    "@vicons/ionicons5": "^0.12.0",
-    "@vicons/material": "^0.12.0",
-    "@vicons/utils": "^0.1.4",
     "axios": "^0.23.0",
     "codemirror": "^6.0.1",
     "dayjs": "^1.11.7",
     "dexie": "^3.2.2",
     "echarts": "^5.4.1",
     "echarts-liquidfill": "^3.1.0",
+    "element-plus": "^2.2.32",
     "flv.js": "^1.6.2",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
