--- a/openDataV/tsconfig.json
+++ b/openDataV/tsconfig.json
@@ -15,5 +15,5 @@
       "@*":["./src*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "./auto-import.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "./auto-imports.d.ts"]
 }
