--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.7",
+    "es-drager": "^1.1.8",
     "gh-pages": "^5.0.0",
     "html2canvas": "^1.4.1",
     "node-uuid": "^1.4.8",
