--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "deploy": " yarn build && yarn gh-pages"
   },
   "dependencies": {
+    "@kjgl77/datav-vue3": "^1.6.1",
     "@mayasabha/ckeditor4-vue3": "^1.0.5",
     "@vueuse/components": "^10.2.1",
     "axios": "^1.4.0",
